src/App.css
:root {
  --clr-primary-000: transparent;
  --clr-primary-100: #ffffffc2;
  --clr-primary-200: #163761be;
  --clr-primary-300: #236f8a;
  --clr-primary-500: #58a7f7;
  --clr-primary-900: black;

  --clr-neutral-100: white;
  --clr-neutral-200: #929191;

  --ff-primary: "Futura", sans-serif;
  --ff-secondary: "Source Sans Pro", Arial, sans-serif;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* typography */

html {
  font-size: 100%;
}

body {
  font-size: 1rem;
  font-weight: 300;
  font-family: var(--ff-primary);
  /* color: var(--clr-neutral-100); */
  color: var(--clr-primary-100);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  line-height: 1.5;
}

h1 {
  font-size: 2.5rem;
  font-weight: 700;
  font-family: var(--ff-primary);
  text-transform: uppercase;
}

#nav {
  font-family: var(--ff-primary);
  font-size: 0.8rem;
  font-weight: 600;
  letter-spacing: 0.1rem;
  text-align: center;
  text-transform: uppercase;
}

h3 {
  font-size: 1rem;
  font-weight: 700;
  font-family: var(--ff-primary);
  text-transform: uppercase;
}

#footer {
  font-family: var(--ff-primary);
  font-size: 0.5rem;
  color: var(--clr-neutral-100);
  font-weight: 700;
  letter-spacing: 0.1rem;
  text-align: center;
}
#footer > h3 {
  font-size: 0.6rem;
}

#copyright {
  color: var(--clr-neutral-100);
  font-family: var(--ff-primary);
  font-size: 0.8rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
  line-height: 1.5;
}

button {
  font-family: var(--ff-primary);
  color: var(--clr-neutral-100);
  font-weight: 900;
  letter-spacing: 0.1rem;
  background-color: #63a8c7;
}

.text-center {
  text-align: center;
}

@media screen and (min-width: 420px) {
  html {
    font-size: 110%;
  }
}
@media screen and (min-width: 2200px) {
  html {
    font-size: 150%;
  }
}

/* general */

@media screen and (max-width: 480px) {
  html,
  body {
    min-width: 320px;
  }
}

html,
body,
#root {
  height: 100%;
}

#root {
  display: flex;
  flex-direction: column;
}

body,
h1,
h2,
h3,
p {
  margin: 0;
}

h1 {
  display: inline-block;
}

h2,
p {
  margin-bottom: 1rem;
}

img {
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

ol,
ul {
  list-style: none;
  margin: 0;
}

.flex {
  display: flex;
}
.flex * {
  padding: 0.25rem;
}

.padding-4rem {
  padding: 4rem;
}

.margin-inline-1rem {
  margin-inline: 0.5rem;
}

body.welcome-theme {
  background: url(../src/images/main_background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.earth-theme {
  background: url(../src/images/earth-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.mars-theme {
  background: url(../src/images/mars-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.jupiter-theme {
  background: url(../src/images/jupiter-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.saturn-theme {
  background: url(../src/images/saturn-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.uranus-theme {
  background: url(../src/images/uranus-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.mercury-theme {
  background: url(../src/images/mercury-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}

body.neptune-theme {
  background: url(../src/images/neptune-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.pluto-theme {
  background: url(../src/images/pluto-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}
body.venus-theme {
  background: url(../src/images/venus-background.jpg) no-repeat center center
    fixed;
  background-size: cover;
}

#container {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin-inline: auto;
}
a {
  color: inherit;
}

/* layout */

.split {
  display: flex;
  flex-direction: column;
  width: 100%;
}

@media (min-width: 1400px) {
  .split {
    flex-direction: row;
  }
}

/* button */
.button {
  background-color: transparent;
  cursor: pointer;
  display: inline-block;
  height: 1.5rem;
  font-size: 0.6rem;
  padding: 0 1rem;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
  border: 1px solid var(--clr-neutral-100);
  margin: 0.5rem;
}

.button.small {
  font-size: 0.4rem;
  height: 1.5rem;
  line-height: 1.5rem;
  padding: 0 0.5rem;
  margin-top: 2rem;
}

.button.large {
  font-size: 0.6rem;
  height: 1.8rem;
  line-height: 1.5rem;
  padding: 0 0.8rem;
}

.button:hover {
  border: none;
}
.button a {
  display: block;
}

